--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "dependencies": {
+    "director": "^1.2.8",
     "mustache": "^2.2.1",
     "requirejs": "^2.1.22",
     "requirejs-text": "^2.0.12",
