--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "dependencies": {
     "director": "^1.2.8",
-    "mustache": "^2.2.1",
+    "lodash-amd": "^3.10.1",
     "requirejs": "^2.1.22",
     "requirejs-text": "^2.0.12",
     "todomvc-app-css": "^1.0.0",
