--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "private": true,
-  "dependencies": {
-    "director": "^1.2.8",
-    "lodash-amd": "^3.10.1",
-    "requirejs": "^2.1.22",
-    "requirejs-text": "^2.0.12",
-    "todomvc-app-css": "^1.0.0",
-    "todomvc-common": "^1.0.1"
-  }
+	"private": true,
+	"dependencies": {
+		"bff-lib": "*",
+		"director": "^1.2.8",
+		"lodash-amd": "^3.10.1",
+		"requirejs": "^2.1.22",
+		"requirejs-text": "^2.0.12",
+		"todomvc-app-css": "^1.0.0",
+		"todomvc-common": "^1.0.1"
+	}
 }
